--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,46 +1,17 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
-
-# The lines below are called `modelines`. See `:help modeline`
-# Feel free to remove those if you don't want/need to use them.
-# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
-# vim: set ts=2 sw=2 tw=0 fo=cnqoj
-
-version: 1
-
-before:
-  hooks:
-    # You may remove this if you don't use go modules.
-    - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
+project_name: xixuanyunsign
 
 builds:
-  - env:
-      - CGO_ENABLED=1
+  - id: windows_386
     goos:
-#      - linux
       - windows
-#      - darwin
+    goarch:
+      - 386
+    main: ./main.go  # 你的入口文件路径
+    env:
+      - CGO_ENABLED=1
+      - CGO_LDFLAGS=-L/c/msys64/mingw32/lib  # 设置MinGW库路径
+      - CGO_CFLAGS=-I/c/msys64/mingw32/include  # 设置MinGW头文件路径
+    ldflags: "-s -w -extldflags '-static'"  # 使编译静态化
+    goarm: [7]
 
-archives:
-  - format: tar.gz
-    # this name template makes the OS and Arch compatible with the results of `uname`.
-    name_template: >-
-      {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
-    # use zip for windows archives
-    format_overrides:
-      - goos: windows
-        format: zip
 
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - "^docs:"
-      - "^test:"
