--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,4 @@
+version: 2
 builds:
   # Linux amd64
   - id: linux-amd64
@@ -174,7 +175,6 @@ archives:
       - linux-armhf
       - linux-armv5
       - linux-armhf-static
-      - linux-arm64-static
       - linux-armv5-static
       - windows-amd64
       - windows-arm64
