--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,19 @@
-name: Release
-
-on:
-  workflow_dispatch: # 手动触发
-
 jobs:
-  build-and-release:
+  release:
     runs-on: ubuntu-latest
     steps:
-      # 检出代码
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      # 使用 GoReleaser 官方 Action
-      - name: Run Goreleaser
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.21
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
-          version: latest # 安装最新版本的 GoReleaser
-          args: release --clean # 移除无效的 --rm-dist 参数
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          version: latest
+          args: release --clean
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
