--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -101,11 +101,15 @@ archives:
       - linux-armhf
       - linux-armv5
       - linux-armv5-static
-      - linux-armhf-static
-      - linux-arm64-static
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format: zip
     wrap_in_directory: true
+    files:
+      - dist/linux-amd64_linux_amd64_v1/xixunyunsign
+      - dist/linux-arm64_linux_arm64_v8.0/xixunyunsign
+      - dist/linux-armhf_linux_arm_7/xixunyunsign
+      - dist/linux-armv5_linux_arm_5/xixunyunsign
+      - dist/linux-armv5-static_linux_arm_5/xixunyunsign
 
 checksum:
   name_template: 'checksums.txt'
