--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,6 +12,8 @@ builds:
       - CGO_ENABLED=1
       - CC=x86_64-linux-gnu-gcc
       - CXX=x86_64-linux-gnu-g++
+      - PKG_CONFIG_SYSROOT_DIR=/sysroot/linux/amd64
+      - PKG_CONFIG_PATH=/sysroot/linux/amd64/usr/lib/pkgconfig:/sysroot/linux/amd64/usr/local/lib/pkgconfig
     flags:
       - -mod=readonly
     ldflags:
@@ -29,6 +31,8 @@ builds:
       - CGO_ENABLED=1
       - CC=aarch64-linux-gnu-gcc
       - CXX=aarch64-linux-gnu-g++
+      - PKG_CONFIG_SYSROOT_DIR=/sysroot/linux/arm64
+      - PKG_CONFIG_PATH=/sysroot/linux/arm64/usr/lib/pkgconfig:/sysroot/linux/arm64/usr/local/lib/pkgconfig
     flags:
       - -mod=readonly
     ldflags:
@@ -48,6 +52,10 @@ builds:
       - CGO_ENABLED=1
       - CC=arm-linux-gnueabihf-gcc
       - CXX=arm-linux-gnueabihf-g++
+      - CGO_CFLAGS=--sysroot=/sysroot/linux/armhf
+      - CGO_LDFLAGS=--sysroot=/sysroot/linux/armhf
+      - PKG_CONFIG_SYSROOT_DIR=/sysroot/linux/armhf
+      - PKG_CONFIG_PATH=/sysroot/linux/armhf/opt/vc/lib/pkgconfig:/sysroot/linux/armhf/usr/lib/arm-linux-gnueabihf/pkgconfig:/sysroot/linux/armhf/usr/lib/pkgconfig:/sysroot/linux/armhf/usr/local/lib/pkgconfig
     flags:
       - -mod=readonly
     ldflags:
@@ -84,7 +92,7 @@ builds:
     goarm:
       - 5
     env:
-      - CGO_ENABLED=1
+      - CGO_ENABLED=0  # 禁用CGo，启用静态编译
       - GOARM=5
       - CC=arm-linux-gnueabi-gcc # 使用适合 ARMv5 的 GCC 编译器
       - CXX=arm-linux-gnueabi-g++ # 使用适合 ARMv5 的 C++ 编译器
@@ -94,22 +102,26 @@ builds:
       - -s -w -X main.version={{.Version}}
 
 archives:
-  - id: golang-cross
+  # 动态编译的二进制文件归档
+  - id: dynamic-binaries
     builds:
       - linux-amd64
       - linux-arm64
       - linux-armhf
       - linux-armv5
-      - linux-armv5-static
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format: zip
     wrap_in_directory: true
-    files:
-      - dist/linux-amd64_linux_amd64_v1/xixunyunsign
-      - dist/linux-arm64_linux_arm64_v8.0/xixunyunsign
-      - dist/linux-armhf_linux_arm_7/xixunyunsign
-      - dist/linux-armv5_linux_arm_5/xixunyunsign
-      - dist/linux-armv5-static_linux_arm_5/xixunyunsign
+    # 可以根据需要添加其他配置项
+
+  # 静态编译的二进制文件归档
+  - id: static-binaries
+    builds:
+      - linux-armv5-static
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}_static"
+    format: zip
+    wrap_in_directory: true
+    # 可以根据需要添加其他配置项
 
 checksum:
   name_template: 'checksums.txt'
