--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,45 +1,34 @@
 version: 2
+
 builds:
   # Linux amd64
-  - id: linux-amd64
+  - id: linux-amd64-v1
     main: ./
     binary: xixunyunsign
     goos:
       - linux
     goarch:
       - amd64
-    env:
-      - CGO_ENABLED=1
-      - CC=x86_64-linux-gnu-gcc
-      - CXX=x86_64-linux-gnu-g++
-      - PKG_CONFIG_SYSROOT_DIR=/sysroot/linux/amd64
-      - PKG_CONFIG_PATH=/sysroot/linux/amd64/usr/lib/pkgconfig:/sysroot/linux/amd64/usr/local/lib/pkgconfig
     flags:
       - -mod=readonly
     ldflags:
       - -s -w -X main.version={{.Version}}
 
   # Linux arm64
-  - id: linux-arm64
+  - id: linux-arm64-v1
     main: ./
     binary: xixunyunsign
     goos:
       - linux
     goarch:
       - arm64
-    env:
-      - CGO_ENABLED=1
-      - CC=aarch64-linux-gnu-gcc
-      - CXX=aarch64-linux-gnu-g++
-      - PKG_CONFIG_SYSROOT_DIR=/sysroot/linux/arm64
-      - PKG_CONFIG_PATH=/sysroot/linux/arm64/usr/lib/pkgconfig:/sysroot/linux/arm64/usr/local/lib/pkgconfig
     flags:
       - -mod=readonly
     ldflags:
       - -s -w -X main.version={{.Version}}
 
-  # Linux armhf (armv7)
-  - id: linux-armhf
+  # Linux armhf
+  - id: linux-armhf-v1
     main: ./
     binary: xixunyunsign
     goos:
@@ -48,21 +37,13 @@ builds:
       - arm
     goarm:
       - 7
-    env:
-      - CGO_ENABLED=1
-      - CC=arm-linux-gnueabihf-gcc
-      - CXX=arm-linux-gnueabihf-g++
-      - CGO_CFLAGS=--sysroot=/sysroot/linux/armhf
-      - CGO_LDFLAGS=--sysroot=/sysroot/linux/armhf
-      - PKG_CONFIG_SYSROOT_DIR=/sysroot/linux/armhf
-      - PKG_CONFIG_PATH=/sysroot/linux/armhf/opt/vc/lib/pkgconfig:/sysroot/linux/armhf/usr/lib/arm-linux-gnueabihf/pkgconfig:/sysroot/linux/armhf/usr/lib/pkgconfig:/sysroot/linux/armhf/usr/local/lib/pkgconfig
     flags:
       - -mod=readonly
     ldflags:
       - -s -w -X main.version={{.Version}}
 
   # Linux armv5
-  - id: linux-armv5
+  - id: linux-armv5-v1
     main: ./
     binary: xixunyunsign
     goos:
@@ -71,18 +52,13 @@ builds:
       - arm
     goarm:
       - 5
-    env:
-      - CGO_ENABLED=1
-      - GOARM=5
-      - CC=arm-linux-gnueabi-gcc # 使用适合 ARMv5 的 GCC 编译器
-      - CXX=arm-linux-gnueabi-g++ # 使用适合 ARMv5 的 C++ 编译器
     flags:
       - -mod=readonly
     ldflags:
       - -s -w -X main.version={{.Version}}
 
-  # Linux armv5 静态编译
-  - id: linux-armv5-static
+  # Linux armv5 Static
+  - id: linux-armv5-static-v1
     main: ./
     binary: xixunyunsign
     goos:
@@ -91,50 +67,47 @@ builds:
       - arm
     goarm:
       - 5
-    env:
-      - CGO_ENABLED=0  # 禁用CGo，启用静态编译
-      - GOARM=5
-      - CC=arm-linux-gnueabi-gcc # 使用适合 ARMv5 的 GCC 编译器
-      - CXX=arm-linux-gnueabi-g++ # 使用适合 ARMv5 的 C++ 编译器
     flags:
       - -mod=readonly
     ldflags:
       - -s -w -X main.version={{.Version}}
 
 archives:
-  # 动态编译的二进制文件归档
-  - id: dynamic-binaries
+  - id: linux-amd64-archive-v1
     builds:
-      - linux-amd64
-      - linux-arm64
-      - linux-armhf
-      - linux-armv5
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+      - linux-amd64-v1
+    name_template: "xixunyunsign_{{ .Version }}_linux_amd64.zip"
     format: zip
-    wrap_in_directory: true
-    # 可以根据需要添加其他配置项
 
-  # 静态编译的二进制文件归档
-  - id: static-binaries
+  - id: linux-arm64-archive-v1
     builds:
-      - linux-armv5-static
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}_static"
+      - linux-arm64-v1
+    name_template: "xixunyunsign_{{ .Version }}_linux_arm64.zip"
     format: zip
-    wrap_in_directory: true
-    # 可以根据需要添加其他配置项
+
+  - id: linux-armhf-archive-v1
+    builds:
+      - linux-armhf-v1
+    name_template: "xixunyunsign_{{ .Version }}_linux_armhf.zip"
+    format: zip
+
+  - id: linux-armv5-archive-v1
+    builds:
+      - linux-armv5-v1
+    name_template: "xixunyunsign_{{ .Version }}_linux_armv5.zip"
+    format: zip
+
+  - id: linux-armv5-static-archive-v1
+    builds:
+      - linux-armv5-static-v1
+    name_template: "xixunyunsign_{{ .Version }}_linux_armv5_static.zip"
+    format: zip
 
 checksum:
   name_template: 'checksums.txt'
 
 snapshot:
   name_template: "{{ .Tag }}"
-
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
 
 release:
   github:
