--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,43 +11,67 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3 # 检出代码仓库
 
-      - name: Set up Python
-        uses: actions/setup-python@v3 # 设置Python环境
-        with:
-          python-version: '3.x' # 指定Python版本
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip # 升级pip
-          # 如果你的脚本依赖于其他Python包，可以在这里安装它们
-          # pip install some-package
-        shell: powershell # 使用PowerShell作为shell
+      # 注意：由于您的脚本是直接在Windows命令行中运行exe文件，而不是作为Python模块或脚本，
+      # 因此实际上不需要设置Python环境。这一步可以省略，除非您的脚本依赖于Python的其他功能。
+      # - name: Set up Python
+      #   uses: actions/setup-python@v3 # 设置Python环境（这一步可以省略）
+      #   with:
+      #     python-version: '3.9' # 指定Python版本（这一步可以省略）
 
       - name: Run auto sign script
         env:
           SIGN_PASSWORD: ${{ secrets.SIGN_PASSWORD }} # 从GitHub Secrets中获取密码
         run: |
-          # 切换到脚本所在的目录（假设脚本已经包含在仓库中）
-          cd .\path\to\your\script\ # 修改为你的脚本实际所在的路径
+          # 切换到脚本所在的目录（请确保此路径正确）
+          cd C:\Users\ct\xixunyunsign # 修改为您的脚本实际所在的路径（由于直接在命令行中运行，使用绝对路径可能更方便）
 
-          # 运行Python脚本，并通过环境变量传递密码（注意：这里使用了示例路径和脚本名）
-          python auto_sign.py --password "$env:SIGN_PASSWORD" # 如果你的脚本不支持从命令行传递密码，你需要修改脚本以接受环境变量或其他安全方式传递的密码
-          # 注意：上面的命令行假设你的脚本接受一个--password参数，如果不是这样，请根据实际情况修改
-          # 如果你的脚本不接受命令行参数，并且你需要直接运行它，那么你可能需要在脚本内部从环境变量中获取密码
-          # 在这种情况下，请确保你的脚本已经正确配置了从环境变量读取密码的逻辑
-        shell: powershell # 使用PowerShell作为shell
+          # 由于您的Python脚本似乎是为了直接在命令行中运行而设计的，
+          # 并且它使用了os.system来调用exe文件，我们不能直接通过Python来运行它，
+          # 除非我们修改脚本以接受命令行参数或环境变量。
+          # 但为了匹配您当前的逻辑，我们将直接在shell中运行命令。
+          # 注意：这里我们不会通过命令行参数传递密码给Python脚本，
+          # 因为您的脚本当前不是这样设计的。相反，我们将在脚本内部处理密码。
+          # （强烈建议您在未来修改脚本以更安全地处理密码）
 
-      # 注意：上面的run步骤中，我们尝试通过命令行参数传递密码，但这通常不是最佳实践。
-      # 更安全的方法是修改你的Python脚本，使其能够从环境变量中读取密码。
-      # 由于你的原始脚本使用了os.system来调用外部命令，并且明文存储了密码，
-      # 你需要重写这部分逻辑以使用更安全的方法（比如subprocess模块和环境变量）。
-      # 下面的注释展示了如果脚本已经修改为从环境变量读取密码，你应该如何运行它：
-      # run: |
-      #   cd .\path\to\your\script\
-      #   python auto_sign.py # 假设脚本现在从环境变量SIGN_PASSWORD中读取密码
+          # 假设您的脚本名为auto_sign.py，但实际上由于它调用exe文件，
+          # 我们可能不需要直接运行这个Python脚本。相反，我们可以创建一个批处理文件（.bat）
+          # 或直接在shell中运行命令。为了简化，这里我们直接在shell中运行命令：
+
+          # 登录
+          xixunyunsign.exe login -a 220723242 -p %SIGN_PASSWORD% -i 2025
+          if errorlevel 1 (
+            echo 登录失败 >> auto_sign.log
+            exit /b 1
+          ) else (
+            echo 登录成功 >> auto_sign.log
+          )
+
+          # 查询
+          xixunyunsign.exe query -a 220723242
+          if errorlevel 1 (
+            echo 查询失败 >> auto_sign.log
+            exit /b 1
+          ) else (
+            echo 查询成功 >> auto_sign.log
+          )
+
+          # 签到
+          xixunyunsign.exe sign -a 220723242 --address 浙江省金华市婺城区创新研究院
+          if errorlevel 1 (
+            echo 签到失败 >> auto_sign.log
+          ) else (
+            echo 签到成功 >> auto_sign.log
+          )
+
+        shell: cmd # 使用CMD作为shell（因为我们在运行Windows命令行命令）
+
+      # 注意：上面的run步骤中，我们直接在shell中运行了命令，而没有通过Python脚本。
+      # 这是因为您的脚本当前是设计为直接在命令行中运行的，并且它调用了exe文件。
+      # 如果您想通过Python脚本来运行这些命令，您需要修改脚本以接受命令行参数或环境变量，
+      # 并使用subprocess模块来安全地运行命令。
 
 # 重要提示：
-# 1. 请确保你已经在GitHub仓库的Settings > Secrets中创建了一个名为SIGN_PASSWORD的secret，并存储了你的密码。
-# 2. 请根据你的实际情况修改上面的YAML文件，特别是路径和脚本名。
-# 3. 由于你的脚本使用了os.system来调用外部命令，这通常不是最佳实践（特别是当涉及到密码等敏感信息时）。
-#    考虑重写这部分逻辑以使用subprocess模块，并从环境变量中安全地读取密码。
+# 1. 请确保您已经在GitHub仓库的Settings > Secrets中创建了一个名为SIGN_PASSWORD的secret，并存储了您的密码。
+# 2. 请根据您的实际情况修改上面的YAML文件，特别是路径和命令。
+# 3. 由于您的脚本直接调用了外部exe文件，并且可能包含了明文密码，这在实际部署中是不安全的。
+#    强烈建议您重写这部分逻辑以使用更安全的方法来处理密码和其他敏感信息。
