--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,24 +2,21 @@ name: Daily Auto Sign
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天 UTC 时间 0 点（北京时间 8 点）触发
-  workflow_dispatch:  # 允许手动触发
+    - cron: '0 0 * * *'  
+  workflow_dispatch:  
 
 jobs:
   auto-sign:
-    runs-on: windows-latest  # 使用 Windows 运行器
+    runs-on: windows-latest  
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3  # 检出代码仓库
+        uses: actions/checkout@v3  
 
       - name: Run auto sign script
         env:
-          SIGN_PASSWORD: ${{ secrets.SIGN_PASSWORD }}  # 从 GitHub Secrets 中获取密码
+          SIGN_PASSWORD: ${{ secrets.SIGN_PASSWORD }}  
         run: |
-          # 切换到脚本所在的目录
-          cd C:\Users\ct\xixunyunsign  # 修改为你的脚本实际路径
-
-          # 登录
+          cd C:\Users\ct\xixunyunsign  
           xixunyunsign.exe login -a 220723242 -p %SIGN_PASSWORD% -i 2025
           if errorlevel 1 (
             echo 登录失败 >> auto_sign.log
@@ -28,7 +25,7 @@ jobs:
             echo 登录成功 >> auto_sign.log
           )
 
-          # 查询
+          
           xixunyunsign.exe query -a 220723242
           if errorlevel 1 (
             echo 查询失败 >> auto_sign.log
@@ -37,7 +34,7 @@ jobs:
             echo 查询成功 >> auto_sign.log
           )
 
-          # 签到
+          
           xixunyunsign.exe sign -a 220723242 --address 浙江省金华市婺城区创新研究院
           if errorlevel 1 (
             echo 签到失败 >> auto_sign.log
