--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,1 +1,53 @@
+name: Daily Auto Sign
 
+on:
+  schedule:
+    - cron: '0 0 * * *'  
+  workflow_dispatch:  
+
+jobs:
+  auto-sign:
+    runs-on: windows-latest  
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3  
+
+      - name: Unzip xixunyunsign
+        run: |
+          
+          Expand-Archive -Path xixunyunsign.zip -DestinationPath .
+        shell: powershell  
+      - name: Run auto sign script
+        env:
+          SIGN_PASSWORD: ${{ secrets.SIGN_PASSWORD }}  
+        run: |
+          
+          cd xixunyunsign
+
+          
+          xixunyunsign.exe login -a 220723242 -p %SIGN_PASSWORD% -i 2025
+          if errorlevel 1 (
+            echo 登录失败 >> auto_sign.log
+            exit /b 1
+          ) else (
+            echo 登录成功 >> auto_sign.log
+          )
+
+          
+          xixunyunsign.exe query -a 220723242
+          if errorlevel 1 (
+            echo 查询失败 >> auto_sign.log
+            exit /b 1
+          ) else (
+            echo 查询成功 >> auto_sign.log
+          )
+
+          
+          xixunyunsign.exe sign -a 220723242 --address 浙江省金华市婺城区创新研究院
+          if errorlevel 1 (
+            echo 签到失败 >> auto_sign.log
+          ) else (
+            echo 签到成功 >> auto_sign.log
+          )
+
+        shell: cmd  
